2010-04-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSToolbarCustomizationPalette.m
	* Source/GSToolbarView.m
	removed c99isms

2010-04-15 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSSegmentedCell.m:
	Fix some situations in initWithCoder: where the _selected_segment
	ivar and the selected state of items in the _items array could be
	out of sync leading to weirdly behaving segmented controls
	loaded from nibs.

2010-04-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextField.m (-textDidEndEditing:): When editing of a
	text field ends	after pressing the Return key and no (other) view
	has become first responder make the text field itself first
	responder by selecting its text just like this is done after
	pressing Tab and Shift-Tab.

2010-04-14 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSWindow.m : removed c99-isms

2010-04-13 Doug Simons <doug.simons@testplant.com>

	* Headers/Additions/GNUstepGUI/GSToolbarView.h:
	* Source/GSToolbarView.m:
	* Source/GSToolbarCustomizationPalette.m:
	* Source/NSToolbar.m:
	* Source/NSToolbarItem.m:
	Fix numerous issues with toolbar customization, including: fix
	crash when customization palette closed; make customization palette
	a floating panel centered below toolbar; rewrote dragging code
	to work well; layout toolbar items when added to toolbar; resize
	customization palette to fit items; etc.

2010-04-13 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/GSToolTips.m: Use a single retain window for tooltips instead of a  
  newly created one each time.  This significantly reduces callback interaction 
  with MS-Windows callbacks.

2010-04-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+JPEG.m
	(-_JPEGRepresentationWithProperties:errorMessage:): Use the
	correct size for the structure in memset.
	Patch by Philippe Roussel <p.o.roussel@free.fr>.

2010-04-10 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/AppKit/NSWindow.h